# rectangle-intersect

./: CMakeLists.txt  README.md
NitroCppTest-JoaoGarrido/: CMakePresets.json
NitroCppTest-JoaoGarrido/source/: Rectangle.hpp  main.cpp
NitroCppTest-JoaoGarrido/test/: CMakeLists.txt
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
example/: test_01.json
source/: Rectangle.cpp  Rectangle.hpp  main.cpp
test/: CMakeLists.txt
test/source/: rectangle-intersection_test.cpp
